--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,24 @@
 {
-	"compilerOptions": {
-		"target": "ES6",
-		"module": "CommonJS",
-		"strict": true,
-		"esModuleInterop": true,
-		"outDir": "./dist",
-		"rootDir": "./src"
-	},
-	"exclude": ["node_modules"]
+  "compilerOptions": {
+    "target": "ES6",                             
+    "module": "CommonJS",                        
+    "strict": true,                              
+    "esModuleInterop": true,                     
+    "outDir": "./dist",                          
+    "rootDir": ".",                              
+    "experimentalDecorators": true,             
+    "emitDecoratorMetadata": true,              
+    "resolveJsonModule": true,                  
+    "moduleResolution": "Node",                
+    "baseUrl": ".",                              
+    "paths": {
+      "@backend/*": ["backend/src/*"],           
+      "@frontend/*": ["frontend/*"]              
+    },
+    "jsx": "react-jsx",               
+    "skipLibCheck": true,
+		"typeRoots": ["./node_modules/@types", "./backend/src/types"]
+  },
+  "exclude": ["node_modules", "dist"],           
+  "include": ["backend/src", "frontend", "backend/src/types/**/*"]         
 }
-  
