--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@nestjs/swagger": "^8.1.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
