--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
 		"typeRoots": ["./node_modules/@types", "./backend/src/types"]
   },
   "exclude": ["node_modules", "dist"],           
-  "include": ["backend/src", "frontend", "backend/src/types/**/*"]         
+  "include": ["./", "backend/src/types/**/*"]         
 }
