--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
       - .:/usr/src/app
       - /usr/src/app/node_modules
     ports:
-      - "3000:3000"
-    environment:
-      NODE_ENV: development
+      - "${PORT}:${PORT}"
+    env_file:
+      - .env
     command: sh -c "npm install && npm run dev"
     stdin_open: true
     tty: true
